add README.md and fix document.html

--- a/templates/document.html
+++ b/templates/document.html
@@ -11,13 +11,13 @@
     <div class="container">
         <h1>Usage Guide</h1>
         <p>1. Visit UNSW Library and find your desired answer</p>
-        <img src="{{ url_for('static', filename='doc1.gif') }}" alt="doc1.gif" class="document-image">
+        <img src="{{ url_for('static', filename='doc1.gif') }}" alt="Visit Library" class="document-image">
         <p>2. Scroll down the page to find `Detail` part</p>
-        <img src="{{ url_for('static', filename='doc2.gif') }}" alt="doc2.gif" class="document-image">
+        <img src="{{ url_for('static', filename='doc2.gif') }}" alt="Find detail part" class="document-image">
         <p>3. Copy the whole part</p>
-        <img src="{{ url_for('static', filename='doc3.gif') }}" alt="doc3.gif" class="document-image">
+        <img src="{{ url_for('static', filename='doc3.gif') }}" alt="Copy the detail part" class="document-image">
         <p>4. Paste it into the generator and simply click the button</p>
-        <img src="{{ url_for('static', filename='doc1.gif') }}" alt="doc1.gif" class="document-image">
+        <img src="{{ url_for('static', filename='doc4.gif') }}" alt="Paste it to the generator" class="document-image">
     </div>
     <!-- 返回按钮 -->
     <button id="returnBtn" class="return-btn" onclick="returnToHome()">Return to Home</button>
